tests/NormalTests/paczka1/fuzzy1/37905814.err
Error in line 15: UgCcjR S862 45,4
Error in line 32: UgCcjR S983 15,4
Error in line 31: KjGpyvv2 S665 50,1
Error in line 36: KjGpyvv2 S747 87,6
